# depscope

./: CONTRIBUTING.md  README.md  depscope.py  pyproject.toml
.github/workflows/: ci.yml
