[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "depscope"
version = "0.1.0"
description = "Dependency Permission & Capability Scanner — map what your Python dependencies can DO on your system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Kris Kimmerle", email = "kris@kriskimmerle.com"},
]
keywords = [
    "security", "dependencies", "capabilities", "permissions",
    "supply-chain", "audit", "sandbox", "owasp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/depscope"
Repository = "https://github.com/kriskimmerle/depscope"

[project.scripts]
depscope = "depscope:main"
